# skills

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
app/: __init__.py  anthropic.py  cleaning_evaluator.py  cleaning_function_generator.py  cleaning_refiner.py  cli.py  crawl.py  delete_skill.py  folder_structure.py  index.py  iteration_manager.py  list_skills.py  logging_util.py  markdown_llm.py  marketplace_manager.py  page_cleaner.py  page_sampler.py  persist.py  skill_validator.py  url_to_name.py
skills/: gorm_io_docs.md
skills/echo-labstack-com-docs/: SKILL.md
skills/echo-labstack-com-docs/references/: echo-labstack-com-docs-binding.md  echo-labstack-com-docs-category-cookbook.md  echo-labstack-com-docs-category-guide.md  echo-labstack-com-docs-category-middleware.md  echo-labstack-com-docs-context.md  echo-labstack-com-docs-cookbook-auto-tls.md  echo-labstack-com-docs-cookbook-cors.md  echo-labstack-com-docs-cookbook-crud.md  echo-labstack-com-docs-cookbook-embed-resources.md  echo-labstack-com-docs-cookbook-file-download.md  echo-labstack-com-docs-cookbook-file-upload.md  echo-labstack-com-docs-cookbook-google-app-engine.md  echo-labstack-com-docs-cookbook-graceful-shutdown.md  echo-labstack-com-docs-cookbook-hello-world.md  echo-labstack-com-docs-cookbook-http2-server-push.md  echo-labstack-com-docs-cookbook-http2.md  echo-labstack-com-docs-cookbook-jsonp.md  (+48 more)
skills/gorm-io-docs/: SKILL.md
skills/gorm_io_docs/: SKILL.md
skills/htmx-org-docs/: SKILL.md
skills/hyperscript-org-docs/: SKILL.md
(+47 files in other folders)
