[project]
name = "skillmaker"
version = "0.1.0"
description = "Make markdown from docs into skills"
authors = [
    {name = "kaiqgs",email = "kags_@live.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium",
    "anthropic",
    "markdownify"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
